--- a/.classpath
+++ b/.classpath
@@ -2,9 +2,10 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="E:/Support/lib/sqljdbc4.jar"/>
-	<classpathentry kind="lib" path="E:/Support/lib/org.apache.commons.io.jar"/>
-	<classpathentry kind="lib" path="E:/Complete Soft/ETDS TAG/lib/itextpdf-5.5.9.jar"/>
-	<classpathentry kind="lib" path="E:/Complete Soft/ETDS TAG/lib/itext-pdfa-5.5.2.jar"/>
+	<classpathentry kind="lib" path="D:/Complete Soft/ETDS TAG/lib/itextpdf-5.5.9.jar"/>
+	<classpathentry kind="lib" path="D:/Complete Soft/ETDS TAG/lib/itext-pdfa-5.5.2.jar"/>
+	<classpathentry kind="lib" path="D:/Support/lib/org.apache.commons.io.jar"/>
+	<classpathentry kind="lib" path="D:/Support/lib/sqljdbc4.jar"/>
+	<classpathentry kind="lib" path="D:/Support/lib/pdfbox-app-2.0.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
